--- a/src/app/post/components/embed/EmbeddedRecord.module.scss
+++ b/src/app/post/components/embed/EmbeddedRecord.module.scss
@@ -5,7 +5,6 @@
   border-radius: var(--cmm-radius-2xl);
   padding: 0.75em;
   position: relative;
-  overflow: hidden;
 
   &.link:hover {
     border-color: var(--cmm-color-border-emphasis);
@@ -19,7 +18,8 @@
 }
 
 .header {
-  display: flex;
+  display: grid;
+  grid-template-columns: auto 1fr;
   align-items: center;
   gap: 0.2em;
 }
@@ -33,17 +33,21 @@
   --cmm-Avatar-size: 1em;
 }
 
+.username {
+  min-inline-size: 0;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
 .displayName {
   font-weight: var(--cmm-font-weight-bold);
-  white-space: nowrap;
+  margin-inline-end: 0.3em;
 }
 
 .handle {
   font-size: var(--cmm-font-size-sm);
   color: var(--cmm-color-font-subtle);
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
 
 .body {
